--- a/容器技术/Docker/1.Docker[安装].md
+++ b/容器技术/Docker/1.Docker[安装].md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [安装与基础指令](#%E5%AE%89%E8%A3%85%E4%B8%8E%E5%9F%BA%E7%A1%80%E6%8C%87%E4%BB%A4)
 - [常用命令](#%E5%B8%B8%E7%94%A8%E5%91%BD%E4%BB%A4)
@@ -16,7 +17,11 @@ Centos 下安装：
 
 启动 Docker 服务：
 
-    systemctl start docker
+```shell
+systemctl start docker
+# or
+service docker start
+```
 
 在线搜索 Docker 镜像：
 
@@ -35,6 +40,7 @@ Centos 下安装：
 - 删除镜像：`docker image rm centos`
 - 启动 docker 容器：`docker run -itd -p 80:80 --name nginx`
 - 进入容器：`docker exec -it aaaa /bin/bash`
+- 进入容器：`docker attach aaa`
 - 带有初始化脚本的 exec：`docker exec -it 09dd /bin/bash --init-file /.bashrc`
 - 提交容器：`docker commit afcaf46e8305 my-images`
 - 导出容器：`docker export a123456 > my-images.tar`
@@ -52,3 +58,11 @@ Centos 下安装：
     docker pull
 
 **Tips：容器是以任务为核心启动的，如果任务结束，则容器也会退出，所以容器的入口点执行的程序必须是一个前台程序**
+
+## 运行 Centos
+
+```bash
+# 不使用 docker run -itd centos /bin/bash 这样会使systemctl无法使用
+# 一般不要使用特权模式
+docker run -itd --privileged centos /usr/sbin/init
+```
