--- a/小目标.md
+++ b/小目标.md
@@ -20,12 +20,12 @@
 - [x] node-cli 指令开发学习
 - [x] 《JavaScript 高级程序设计》研读（2021/05/22 阅毕）
 - [ ] webpack5 特性学习
-- [ ] Babel各模块走看
+- [ ] Babel 各模块走看
 - [ ] Electron 整体学习
 - [x] Electron 练习小项目
 - [ ] Three.js 学习
 - [ ] 一个人工智能的诞生学习
-- [ ] WebAssembly学习
+- [ ] WebAssembly 学习
 
 ## 音乐
 
@@ -43,9 +43,9 @@
 - [x] 三体
 - [x] 皮囊
 - [x] 杀死一只知更鸟
-- [x] 枪炮病菌与钢铁
-- [x] 飘-上(2021 年)
-- [ ] 飘-下(2021 年内完成)
+- [x] 枪炮病菌与钢铁(2021)
+- [x] 飘-上(2021)
+- [x] 飘-下(2021-07)
 - [ ] 原生家庭
 - [ ] 性格拼图
 - [ ] 你当像鸟飞往你的山
@@ -58,6 +58,6 @@
 
 - [x] 配置实现软路由相关功能
 - [x] NAS 服务搭建
-- [ ] DOS批处理学习
+- [ ] DOS 批处理学习
 - [ ] Fcpx 学习
 - [ ] Pr 学习
