--- a/小目标.md
+++ b/小目标.md
@@ -21,11 +21,12 @@
 - [x] 《JavaScript 高级程序设计》研读（2021/05/22 阅毕）
 - [ ] webpack5 特性学习
 - [ ] Babel 各模块走看
-- [ ] Electron 整体学习
+- [x] Electron 整体学习
 - [x] Electron 练习小项目
 - [ ] Three.js 学习
 - [ ] 一个人工智能的诞生学习
 - [ ] WebAssembly 学习
+- [ ] Next.js
 
 ## 音乐
 
@@ -58,6 +59,6 @@
 
 - [x] 配置实现软路由相关功能
 - [x] NAS 服务搭建
-- [ ] DOS 批处理学习
+- [x] DOS 批处理学习
 - [ ] Fcpx 学习
 - [ ] Pr 学习
