--- a/小目标.md
+++ b/小目标.md
@@ -23,12 +23,14 @@
 - [ ] Babel 各模块走看
 - [x] Electron 整体学习
 - [x] Electron 练习小项目
+- [ ] requirejs
+- [ ] Systemjs
+- [ ] esbuild
 - [ ] Three.js 学习
-- [ ] 一个人工智能的诞生学习
 - [ ] WebAssembly 学习
 - [ ] Next.js
 - [ ] Vite
-- [ ] esbuild
+- [ ] 一个人工智能的诞生学习
 
 ## 音乐
 
