--- a/前端方向/前端基础/Requirejs/2.Requirejs[模块定义].md
+++ b/前端方向/前端基础/Requirejs/2.Requirejs[模块定义].md
@@ -80,3 +80,22 @@ define("foo/title", ["my/cart", "my/inventory"], function (cart, inventory) {
   };
 });
 ```
+
+### 循环依赖
+
+如果你定义了一个循环依赖("a"依赖 "b"， "b"同时依赖"a")，则在这种情形下当 "b" 模块函数被调用的时候，它会得到一个 undefined 的"a"。b 可以在模块已经定义好后用 require()方法再获取(记得将 require 作为依赖注入进来)
+
+```js
+//Inside b.js:
+define(["require", "a"], function (require, a) {
+  //"a" in this case will be null if "a" also asked for "b",
+  //a circular dependency.
+
+  // 此时a为null
+
+  return function (title) {
+    // 此函数的的调用时机必须在a模块加载初始化完毕后
+    return require("a").doSomething();
+  };
+});
+```
