--- a/小目标.md
+++ b/小目标.md
@@ -23,7 +23,7 @@
 - [ ] Babel 各模块走看
 - [x] Electron 整体学习
 - [x] Electron 练习小项目
-- [ ] requirejs
+- [x] requirejs
 - [ ] Systemjs
 - [ ] esbuild
 - [ ] Three.js 学习
@@ -57,7 +57,7 @@
 - [ ] 社会心理学
 - [ ] 墨菲定律
 - [ ] 梦的解析
-- [ ] 自卑与超越
+- [x] 自卑与超越(2021-08)
 
 ## 瞎折腾
 
@@ -66,4 +66,4 @@
 - [x] DOS 批处理学习
 - [ ] Fcpx 学习
 - [ ] Pr 学习
-- [ ] 树莓派开发板学习
+- [x] 树莓派开发板学习
