--- a/小目标.md
+++ b/小目标.md
@@ -24,7 +24,7 @@
 - [x] Electron 整体学习
 - [x] Electron 练习小项目
 - [x] requirejs
-- [ ] Systemjs
+- [x] Systemjs
 - [ ] esbuild
 - [ ] Three.js 学习
 - [ ] WebAssembly 学习
@@ -36,6 +36,13 @@
 
 - [x] 基础乐理
 - [x] 吉他和弦推理
+
+## 指弹/弹唱曲目
+
+- [x] 同桌的你
+- [x] 成都
+- [ ] You are not alone
+- [ ] 卡农
 
 ## 阅读
 
