--- a/容器技术/Docker/1.Docker[基础命令].md
+++ b/容器技术/Docker/1.Docker[基础命令].md
@@ -37,10 +37,9 @@ service docker start
 - 停止实例:`docker stop 11111`
 - 删除容器实例：`docker rm 11111`
 - 删除所有容器实例:`docker rm $(docker ps -a -q)`
-- 删除镜像：`docker image rm centos`
+- 删除镜像：`docker image rm centos` 或者 `docker rmi centos`
 - 启动 docker 容器：`docker run -itd -p 80:80 --name nginx`
 - 进入容器：`docker exec -it aaaa /bin/bash`
-- 进入容器：`docker attach aaa`
 - 带有初始化脚本的 exec：`docker exec -it 09dd /bin/bash --init-file /.bashrc`
 - 提交容器：`docker commit afcaf46e8305 my-images`
 - 导出容器：`docker export a123456 > my-images.tar`
