--- a/容器技术/Docker/2.Docker[镜像制作].md
+++ b/容器技术/Docker/2.Docker[镜像制作].md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [镜像制作](#%E9%95%9C%E5%83%8F%E5%88%B6%E4%BD%9C)
   - [使用正在运行的镜像](#%E4%BD%BF%E7%94%A8%E6%AD%A3%E5%9C%A8%E8%BF%90%E8%A1%8C%E7%9A%84%E9%95%9C%E5%83%8F)
@@ -33,22 +34,27 @@
 创建文件：Dockerfile
 
 ```dockerfile
-# 基础依赖乌班图的镜像
-FROM ubuntu
+# 基础依赖Centos的镜像
+FROM centos
 # 作者
 MAINTAINER julyWind
-# 执行命令更新
-RUN apt-get update
-RUN apt-get install nginx -y
+# 写入ll命令别名
+RUN echo alias ll="\"ls -l --color\"" > /.dockerenv & . /.dockerenv
+# 更新 & 安装
+RUN yum update -y & yum install wget vim net-tools crontabs -y
+# 安装acme.sh
+RUN curl https://get.acme.sh | sh -s email=11111111@gmail.com
 # 入口执行的命令，数组最终采用空格进行连接，生成一条命令：/usr/sbin/nginx -g deamon off;
-ENTRYPOINT ["/usr/sbin/nginx","-g","daemon off;"]
+# ENTRYPOINT ["/usr/sbin/nginx","-g","daemon off;"]
+# 循环shell命令，保持容器不退出
+ENTRYPOINT ["/bin/bash","-c","while true;do echo hello docker;sleep 1;done"]
 # 暴露80端口
-EXPOSE 80
+EXPOSE 80 443 3306 21 22
 ```
 
 执行命令：`docker build -t my-nginx-ubuntu .`，等待命令执行完成，即创建了一个基于乌班图的 nginx 运行容器
 
-常用Dockerfile原操作命令：
+常用 Dockerfile 原操作命令：
 
 - FROM 指定基础镜像
 - RUN 运行命令
