--- a/小目标.md
+++ b/小目标.md
@@ -33,6 +33,13 @@
 - [ ] 一个人工智能的诞生学习
 - [ ] 程序员的英语
 - [ ] React源码阅读
+- [ ] 极客时间（如何成为学习高手）
+- [ ] 极客时间（Web协议详解与抓包实战）
+- [ ] 极客时间（玩转webpack）
+- [ ] 极客时间（微信小程序全栈开发实战）
+- [ ] 极客时间（Web安全攻防实战）
+- [ ] 极客时间（玩转Vue3全家桶）
+- [ ] 极客时间（跟月影学可视化）
 
 ## 音乐
 
@@ -81,3 +88,5 @@
 - [ ] Fcpx 学习
 - [ ] Pr 学习
 - [x] 树莓派开发板学习
+- [ ] 极客时间（摄影入门课）
+
