--- a/容器技术/Docker/1.Docker[基础命令].md
+++ b/容器技术/Docker/1.Docker[基础命令].md
@@ -35,6 +35,7 @@ service docker start
 
 - 查看所有容器实例（包括已经停止的）:`docker ps -a`
 - 停止实例:`docker stop 11111`
+- 重启实例:`docker restart 11111`
 - 删除容器实例：`docker rm 11111`
 - 删除所有容器实例:`docker rm $(docker ps -a -q)`
 - 删除镜像：`docker image rm centos` 或者 `docker rmi centos`
