--- a/小目标.md
+++ b/小目标.md
@@ -19,7 +19,7 @@
 - [x] npm 模块开发
 - [x] node-cli 指令开发学习
 - [x] 《JavaScript 高级程序设计》研读（2021/05/22 阅毕）
-- [ ] webpack5 特性学习
+- [x] webpack5 特性学习
 - [ ] Babel 各模块走看
 - [x] Electron 整体学习
 - [x] Electron 练习小项目
