--- a/小目标.md
+++ b/小目标.md
@@ -6,6 +6,7 @@
 - [Todo List](#todo-list)
   - [工作充电](#工作充电)
   - [音乐](#音乐)
+  - [指弹与弹唱曲目](#指弹与弹唱曲目)
   - [阅读](#阅读)
   - [瞎折腾](#瞎折腾)
 
@@ -32,13 +33,13 @@
 - [ ] Vite
 - [ ] 一个人工智能的诞生学习
 - [ ] 程序员的英语
-- [ ] React源码阅读
+- [ ] React 源码阅读
 - [ ] 极客时间（如何成为学习高手）
-- [ ] 极客时间（Web协议详解与抓包实战）
-- [ ] 极客时间（玩转webpack）
+- [ ] 极客时间（Web 协议详解与抓包实战）
+- [ ] 极客时间（玩转 webpack）
 - [ ] 极客时间（微信小程序全栈开发实战）
-- [ ] 极客时间（Web安全攻防实战）
-- [ ] 极客时间（玩转Vue3全家桶）
+- [ ] 极客时间（Web 安全攻防实战）
+- [ ] 极客时间（玩转 Vue3 全家桶）
 - [ ] 极客时间（跟月影学可视化）
 
 ## 音乐
@@ -46,12 +47,13 @@
 - [x] 基础乐理
 - [x] 吉他和弦推理
 
-## 指弹/弹唱曲目
+## 指弹与弹唱曲目
 
 - [x] 同桌的你
 - [x] 成都
 - [ ] You are not alone
 - [ ] 卡农
+- [ ] 風の詩
 
 ## 阅读
 
@@ -89,4 +91,3 @@
 - [ ] Pr 学习
 - [x] 树莓派开发板学习
 - [ ] 极客时间（摄影入门课）
-
