--- a/前端方向/前端基础/极客时间[Web协议详解]/3.TCP&IP协议.md
+++ b/前端方向/前端基础/极客时间[Web协议详解]/3.TCP&IP协议.md
@@ -15,6 +15,8 @@
   - 以探测带宽作为依据：BBR Linux4.9
   - 慢启动 cwnd
   - 快速重传（RFC2581）
+- 拥塞控制：慢启动、拥塞避免、拥塞发生、快速恢复（基于丢包）
+- Google BBR 算法：一个周期内占用的带宽呈现三个状态（过载、满载、轻载），分别记录三态数据包的 RTT，如果 RTT 均正常，则向上修正满载的参考带宽大小值（当前带宽未占满），如果 RTT 在过载、满载的情况下比轻载要高，说明当前的满载带宽大于实际的满载网络带宽，需要降低发送带宽，此时向下修正满载带宽数值，通过不断的迭代，平均负载带宽将接近网络的真实满载带宽，并且多个用户如果都使用 BBR 算法进行拥塞控制，理论上将获得均分的网络带宽速度
 
 ## IP
 
@@ -24,7 +26,7 @@ IP 地址用于跨网段传输，子网内传输使用 MAC 地址进行传输，
 
 ## ARP、RARP（反向协议）
 
-ARP 广播，取得 IP 对应的 MAC 地址，然后发送报文，并加入缓存表，RARP 与 ARP 服务相反，通过皮 MAC 地址查询到 IP 地址
+ARP 广播向局网内所有主机询问MAC地址（谁是：192.168.1.109，你的MAC地址是多少？），取得 IP 对应的 MAC 地址，然后发送报文，并加入缓存表，RARP 与 ARP 服务相反，通过皮 MAC 地址查询到 IP 地址
 
 ## DHCP
 
