--- a/瞎看看/学习高手/2.学习高手[告别伪勤奋].md
+++ b/瞎看看/学习高手/2.学习高手[告别伪勤奋].md
@@ -1,3 +1,16 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [道德许可效应](#%E9%81%93%E5%BE%B7%E8%AE%B8%E5%8F%AF%E6%95%88%E5%BA%94)
+- [伪勤奋特点](#%E4%BC%AA%E5%8B%A4%E5%A5%8B%E7%89%B9%E7%82%B9)
+  - [花大量时间做容易的环节](#%E8%8A%B1%E5%A4%A7%E9%87%8F%E6%97%B6%E9%97%B4%E5%81%9A%E5%AE%B9%E6%98%93%E7%9A%84%E7%8E%AF%E8%8A%82)
+  - [从来不去检测自己获得了什么](#%E4%BB%8E%E6%9D%A5%E4%B8%8D%E5%8E%BB%E6%A3%80%E6%B5%8B%E8%87%AA%E5%B7%B1%E8%8E%B7%E5%BE%97%E4%BA%86%E4%BB%80%E4%B9%88)
+  - [只是埋头苦学，从来不总结规律](#%E5%8F%AA%E6%98%AF%E5%9F%8B%E5%A4%B4%E8%8B%A6%E5%AD%A6%E4%BB%8E%E6%9D%A5%E4%B8%8D%E6%80%BB%E7%BB%93%E8%A7%84%E5%BE%8B)
+  - [道德许可效应](#%E9%81%93%E5%BE%B7%E8%AE%B8%E5%8F%AF%E6%95%88%E5%BA%94-1)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 道德许可效应
 
 道德许可（moral licensing）是指，当你对某事有一个明确的道德标准之后，在做出相关的行为和判断时，反而更倾向于违背这个标准。通俗来说就是，当我们做了一些好的、上进的事情之后，就倾向于做一些坏的、堕落的事情，来破坏自己之前的努力。
