--- a/瞎看看/学习高手/3.学习高手[拿捏考试].md
+++ b/瞎看看/学习高手/3.学习高手[拿捏考试].md
@@ -1,3 +1,15 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [针对性学习](#%E9%92%88%E5%AF%B9%E6%80%A7%E5%AD%A6%E4%B9%A0)
+- [即用即学](#%E5%8D%B3%E7%94%A8%E5%8D%B3%E5%AD%A6)
+- [专注（考场上的得失心）](#%E4%B8%93%E6%B3%A8%E8%80%83%E5%9C%BA%E4%B8%8A%E7%9A%84%E5%BE%97%E5%A4%B1%E5%BF%83)
+  - [工作记忆（运行内存）](#%E5%B7%A5%E4%BD%9C%E8%AE%B0%E5%BF%86%E8%BF%90%E8%A1%8C%E5%86%85%E5%AD%98)
+  - [过分关注学习方法](#%E8%BF%87%E5%88%86%E5%85%B3%E6%B3%A8%E5%AD%A6%E4%B9%A0%E6%96%B9%E6%B3%95)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 针对性学习
 
 我们的学习模式，是先埋头苦读，然后再去考试。我们的习惯思维是，只要掌握得滚瓜烂熟，那么考场上自然什么题都会做。
@@ -18,7 +30,7 @@
 
 主动思考：你在所输出的答案上，需要付出的主动努力越多，学习和记忆的效果越好。
 
-## 考场上的得失心
+## 专注（考场上的得失心）
 
 **一旦你有了得失心，并且畏惧自己做得不好，担忧会浪费时间、带来失败的结果，你就迷失了。**
 
@@ -28,4 +40,14 @@ _墨菲定律：你越是担心某件事会发生，它就越可能发生。_
 
 ### 工作记忆（运行内存）
 
-工作记忆能够存储和处理的信息容量越多，意味着你解决问题的能力就越强；考场上的患得患失会占用你的运行内存，导致你处理问题的效率低下
+工作记忆能够存储和处理的信息容量越多，意味着你解决问题的能力就越强；考场上的患得患失会占用你的运行内存，导致你处理问题的效率低下。
+
+**做事情的时候，不要想；做完了，再去想。珍惜你的工作记忆，把它们全部用于做题本身。**
+
+### 过分关注学习方法
+
+首先明确：**对于某一固定的学科或者领域，学习基本上是个匀加速或者变加速的过程，你的方法会逐渐完善，效率会逐步提高。**
+
+你不可能在一开始，就找到正确的学习方法。毕竟，你需要从零开始了解一本书，你无法预测学习的内容，以及过程中会遇到的问题。必须接受这个事实：**一开始的学习效率，必然不高。**
+
+解决方案：学习过程中不要过分关注方法的对错，选定一个方法后就专注去做，哪怕他是错的；日后定期复盘，对学习进度/方法进行评估，逐步筛选出高效的学习方法。
