--- a/小目标.md
+++ b/小目标.md
@@ -26,6 +26,7 @@
 - [x] Electron 练习小项目
 - [x] requirejs
 - [x] Systemjs
+- [x] 极客时间（Web 协议详解与抓包实战）
 - [ ] esbuild
 - [ ] Three.js 学习
 - [ ] WebAssembly 学习
@@ -35,7 +36,6 @@
 - [ ] 程序员的英语
 - [ ] React 源码阅读
 - [ ] 极客时间（如何成为学习高手）
-- [ ] 极客时间（Web 协议详解与抓包实战）
 - [ ] 极客时间（玩转 webpack）
 - [ ] 极客时间（微信小程序全栈开发实战）
 - [ ] 极客时间（Web 安全攻防实战）
