--- a/瞎看看/学习高手/5.高效学习[复盘].md
+++ b/瞎看看/学习高手/5.高效学习[复盘].md
@@ -1,6 +1,7 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
 
 - [现象](#%E7%8E%B0%E8%B1%A1)
 - [复习](#%E5%A4%8D%E4%B9%A0)
@@ -44,10 +45,12 @@
 
 尝试连接：长期睡眠不足，容易导致精神压力较大、易受诱惑、情绪容易失控、注意力涣散
 
-一定要尝试把各个关键字进行连接，这相当于对之前的提取进行测验，有助于增加记忆效果。
+一定要尝试把各个关键字进行连接，这相当于对之前的提取进行测验，有助于增加记忆效果。**每一次复习，我们都可以重新去组织语言**
 
 ### 基准打击
 
 一下记忆大量知识点，大篇幅的文章不大现实，也是低效率的；面对这种场景，我们可以采用定点突破，关注重点去“速成”，当然这个速成不是真的要我们去速成，而是一种方法，先记住知识点中的某些关键性的重点，然后在这些重点的基础上进行扩散，进而记住更多细节。
 
 如果一开始就让你通篇记忆，这个难度是非常大的，哪怕是当时记住了，也会很快遗忘。
+
+思路：记住少量关键信息 => 逐步拓展补充细节 => 完整记记下
