--- a/瞎看看/学习高手/B.高效学习/3.高效学习[主动思考与加工].md
+++ b/瞎看看/学习高手/B.高效学习/3.高效学习[主动思考与加工].md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [开过光的序](#%E5%BC%80%E8%BF%87%E5%85%89%E7%9A%84%E5%BA%8F)
+- [精细化提问](#%E7%B2%BE%E7%BB%86%E5%8C%96%E6%8F%90%E9%97%AE)
+- [组块化记忆](#%E7%BB%84%E5%9D%97%E5%8C%96%E8%AE%B0%E5%BF%86)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 开过光的序
 
 “主动思考”和“加工”，是可以应用在一切记忆场景中的。甚至可以认为，它们是记忆的底层逻辑；
