--- a/瞎看看/学习高手/B.高效学习/4.高效学习[高效阅读].md
+++ b/瞎看看/学习高手/B.高效学习/4.高效学习[高效阅读].md
@@ -1,3 +1,15 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [关于速读](#%E5%85%B3%E4%BA%8E%E9%80%9F%E8%AF%BB)
+- [阅读方式](#%E9%98%85%E8%AF%BB%E6%96%B9%E5%BC%8F)
+  - [结果导向式](#%E7%BB%93%E6%9E%9C%E5%AF%BC%E5%90%91%E5%BC%8F)
+  - [漫游式](#%E6%BC%AB%E6%B8%B8%E5%BC%8F)
+- [如何记住阅读的书籍](#%E5%A6%82%E4%BD%95%E8%AE%B0%E4%BD%8F%E9%98%85%E8%AF%BB%E7%9A%84%E4%B9%A6%E7%B1%8D)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 关于速读
 
 对于读书来说，读得越多，读得越快。丰富的知识储备，是快速阅读的必要前提。只有当你对某个领域的基础知识、专业术语等等有了较为全面的了解，才能保证你在读书的时候，不需要纠结于字句的意思，而是快速理解和往后推进。
