--- a/瞎看看/学习高手/B.高效学习/5.高效学习[进入新领域].md
+++ b/瞎看看/学习高手/B.高效学习/5.高效学习[进入新领域].md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [当你进入新的领域](#%E5%BD%93%E4%BD%A0%E8%BF%9B%E5%85%A5%E6%96%B0%E7%9A%84%E9%A2%86%E5%9F%9F)
+- [如何回答论述题](#%E5%A6%82%E4%BD%95%E5%9B%9E%E7%AD%94%E8%AE%BA%E8%BF%B0%E9%A2%98)
+- [动起来动起来](#%E5%8A%A8%E8%B5%B7%E6%9D%A5%E5%8A%A8%E8%B5%B7%E6%9D%A5)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 当你进入新的领域
 
 - 知识涉猎：悠闲涉猎综合性书籍，广度优先，不要先去看深度比较深的书，一来你看不懂，二来抓不到哪个分支是该领域的重点，优先看综合性的书籍能帮助你快速建立该领域的知识地图，帮助你快速确定进一步学习的方向
@@ -16,3 +26,11 @@
 - 创新与新颖：加入自己的观点，且要有所创新，与众不同。能让你取得高分的重点，要在众多回答中脱颖而出，那么势必要有所不同，重点就是创新。
 
 **在看书的时候，要多思考不同知识点之间的联系，把它们结成一张网。在答题的时候，主动思考的意识，以及较广的知识面，还有发散的思维，都是老师希望在你的答案中看到的。**
+
+## 动起来动起来
+
+**重点：动起来，产出**
+
+进入新领域之后，你会学习这个领域的技巧与方法，知道了一些基本的方法，就可以开始做，你要立刻输出，要立刻看到成果
+
+在“做”之前，你对方法和思维的理解，只是自以为理解而已，一定要投入到实际的“输出”中去，产出或有用，或垃圾的产物；但是没关系，有产出有实践才会暴露你学习的问题，检验是否真正掌握。
