--- a/瞎看看/Electron/1.Electron[基础].md
+++ b/瞎看看/Electron/1.Electron[基础].md
@@ -1,12 +1,10 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
-
-- [Electron 基础](#electron-基础)
-    - [调试工具 devtron](#调试工具-devtron)
-    - [在 render 进程中使用 main 进程的 API](#在-render-进程中使用-main-进程的-api)
-- [Electron + React 开发环境搭建](#electron--react-开发环境搭建)
+- [Electron 基础](#electron-%E5%9F%BA%E7%A1%80)
+    - [调试工具 devtron](#%E8%B0%83%E8%AF%95%E5%B7%A5%E5%85%B7-devtron)
+    - [在 render 进程中使用 main 进程的 API](#%E5%9C%A8-render-%E8%BF%9B%E7%A8%8B%E4%B8%AD%E4%BD%BF%E7%94%A8-main-%E8%BF%9B%E7%A8%8B%E7%9A%84-api)
+- [Electron + React 开发环境搭建](#electron--react-%E5%BC%80%E5%8F%91%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
