--- a/瞎看看/NFC卡片/2.NFC卡片[数据结构].md
+++ b/瞎看看/NFC卡片/2.NFC卡片[数据结构].md
@@ -1,3 +1,17 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [卡片数据结构](#%E5%8D%A1%E7%89%87%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84)
+- [详细的数据结构](#%E8%AF%A6%E7%BB%86%E7%9A%84%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84)
+  - [0 号扇区 0 号区块](#0-%E5%8F%B7%E6%89%87%E5%8C%BA-0-%E5%8F%B7%E5%8C%BA%E5%9D%97)
+  - [关于 0 扇区 ID 的校验位](#%E5%85%B3%E4%BA%8E-0-%E6%89%87%E5%8C%BA-id-%E7%9A%84%E6%A0%A1%E9%AA%8C%E4%BD%8D)
+  - [每个扇区的 3 号区块](#%E6%AF%8F%E4%B8%AA%E6%89%87%E5%8C%BA%E7%9A%84-3-%E5%8F%B7%E5%8C%BA%E5%9D%97)
+  - [三号区块的访问控制字节](#%E4%B8%89%E5%8F%B7%E5%8C%BA%E5%9D%97%E7%9A%84%E8%AE%BF%E9%97%AE%E6%8E%A7%E5%88%B6%E5%AD%97%E8%8A%82)
+- [全球通用的 13 个默认密码](#%E5%85%A8%E7%90%83%E9%80%9A%E7%94%A8%E7%9A%84-13-%E4%B8%AA%E9%BB%98%E8%AE%A4%E5%AF%86%E7%A0%81)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 卡片数据结构
 
 一张卡最小的读写大小称之为一个区块，大小为 16 个字节，总共 64 个区块，总大小为 1Kb；每 4 个区块构成一个整体称之为一个扇区，总计 16 个扇区
