--- a/瞎看看/批处理/2.[变量与运行时参数].md
+++ b/瞎看看/批处理/2.[变量与运行时参数].md
@@ -1,3 +1,14 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [运行时参数](#%E8%BF%90%E8%A1%8C%E6%97%B6%E5%8F%82%E6%95%B0)
+- [变量](#%E5%8F%98%E9%87%8F)
+- [局部变量](#%E5%B1%80%E9%83%A8%E5%8F%98%E9%87%8F)
+- [环境变量](#%E7%8E%AF%E5%A2%83%E5%8F%98%E9%87%8F)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 批处理文件中有两种类型的变量。 其中一个参数是在调用批处理文件时可以传递的参数，另一个是通过 set 命令完成的。
 
 ## 运行时参数
