--- a/瞎看看/批处理/5.[数组].md
+++ b/瞎看看/批处理/5.[数组].md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [数组](#%E6%95%B0%E7%BB%84)
+  - [定义数组](#%E5%AE%9A%E4%B9%89%E6%95%B0%E7%BB%84)
+  - [数组的长度](#%E6%95%B0%E7%BB%84%E7%9A%84%E9%95%BF%E5%BA%A6)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 数组
 
 ### 定义数组
