--- a/瞎看看/批处理/6.[if流程控制].md
+++ b/瞎看看/批处理/6.[if流程控制].md
@@ -1,3 +1,15 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [if](#if)
+- [if/else](#ifelse)
+- [判断文件是否存在](#%E5%88%A4%E6%96%AD%E6%96%87%E4%BB%B6%E6%98%AF%E5%90%A6%E5%AD%98%E5%9C%A8)
+- [判断前一个程序退出的返回值](#%E5%88%A4%E6%96%AD%E5%89%8D%E4%B8%80%E4%B8%AA%E7%A8%8B%E5%BA%8F%E9%80%80%E5%87%BA%E7%9A%84%E8%BF%94%E5%9B%9E%E5%80%BC)
+- [关于运算符](#%E5%85%B3%E4%BA%8E%E8%BF%90%E7%AE%97%E7%AC%A6)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## if
 
 与 shell 一样，bat 脚本支持反向验证（使用NOT完成：IF NOT condition）,不区分类型，区分大小写
