--- a/瞎看看/Electron/2.Electron[打包配置].md
+++ b/瞎看看/Electron/2.Electron[打包配置].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [打包发布](#%E6%89%93%E5%8C%85%E5%8F%91%E5%B8%83)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 打包发布
 
 1. 安装 electron-builder：`yarn add electron-builder -D`
