--- a/瞎看看/批处理/1.[基础语法].md
+++ b/瞎看看/批处理/1.[基础语法].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [命令提示符回显与注释](#%E5%91%BD%E4%BB%A4%E6%8F%90%E7%A4%BA%E7%AC%A6%E5%9B%9E%E6%98%BE%E4%B8%8E%E6%B3%A8%E9%87%8A)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 命令提示符回显与注释
 
 - @：关闭当前行的命令提示符回显
