--- a/瞎看看/批处理/3.[注释].md
+++ b/瞎看看/批处理/3.[注释].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [Bat中的注释有两种](#bat%E4%B8%AD%E7%9A%84%E6%B3%A8%E9%87%8A%E6%9C%89%E4%B8%A4%E7%A7%8D)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## Bat中的注释有两种
 
 两种注释没有显著区别
