--- a/瞎看看/批处理/4.[字符串].md
+++ b/瞎看看/批处理/4.[字符串].md
@@ -1,3 +1,16 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [字符串判空](#%E5%AD%97%E7%AC%A6%E4%B8%B2%E5%88%A4%E7%A9%BA)
+- [字符串组拼/插值](#%E5%AD%97%E7%AC%A6%E4%B8%B2%E7%BB%84%E6%8B%BC%E6%8F%92%E5%80%BC)
+- [转为数字](#%E8%BD%AC%E4%B8%BA%E6%95%B0%E5%AD%97)
+- [字符串截取](#%E5%AD%97%E7%AC%A6%E4%B8%B2%E6%88%AA%E5%8F%96)
+- [字符串替换/删除子串](#%E5%AD%97%E7%AC%A6%E4%B8%B2%E6%9B%BF%E6%8D%A2%E5%88%A0%E9%99%A4%E5%AD%90%E4%B8%B2)
+- [删除所有空格](#%E5%88%A0%E9%99%A4%E6%89%80%E6%9C%89%E7%A9%BA%E6%A0%BC)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ### 字符串判空
 
 ```bat
