--- a/瞎看看/批处理/7.[for流程控制].md
+++ b/瞎看看/批处理/7.[for流程控制].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [For 流程控制](#for-%E6%B5%81%E7%A8%8B%E6%8E%A7%E5%88%B6)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## For 流程控制
 
 在 cmd 窗口中，for 之后的形式变量 I 必须使用单百分号引用，即%I；而在批处理文件中，引用形式变量 I 必须使用双百分号，即%%I
