--- a/瞎看看/批处理/8.[输入输出].md
+++ b/瞎看看/批处理/8.[输入输出].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [输出重定向](#%E8%BE%93%E5%87%BA%E9%87%8D%E5%AE%9A%E5%90%91)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 输出重定向
 
 ~~~bat
