--- a/瞎看看/批处理/9.[扩充变量].md
+++ b/瞎看看/批处理/9.[扩充变量].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [变量扩展](#%E5%8F%98%E9%87%8F%E6%89%A9%E5%B1%95)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 变量扩展
 
 ```bat
