--- a/瞎看看/学习高手/E.学霸养成/2.学霸养成[天赋与努力].md
+++ b/瞎看看/学习高手/E.学霸养成/2.学霸养成[天赋与努力].md
@@ -1,3 +1,12 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [天赋与努力](#%E5%A4%A9%E8%B5%8B%E4%B8%8E%E5%8A%AA%E5%8A%9B)
+- [环境对智商的影响](#%E7%8E%AF%E5%A2%83%E5%AF%B9%E6%99%BA%E5%95%86%E7%9A%84%E5%BD%B1%E5%93%8D)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 天赋与努力
 
 如果我们认为自己天赋很高，当遭遇困难的问题时更容易出现沮丧与放弃，原因在于，我们更可能产生对自己天赋高，智商高的怀疑（毕竟我们相信自己非常聪明，应该什么都会，什么都学得快），而天赋是一个不能有你控制的因素，因此更可能导致放弃行为。
