--- a/瞎看看/学习高手/E.学霸养成/3.学霸养成[加速成长].md
+++ b/瞎看看/学习高手/E.学霸养成/3.学霸养成[加速成长].md
@@ -1,3 +1,13 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [路径依赖](#%E8%B7%AF%E5%BE%84%E4%BE%9D%E8%B5%96)
+- [认知双加工理论](#%E8%AE%A4%E7%9F%A5%E5%8F%8C%E5%8A%A0%E5%B7%A5%E7%90%86%E8%AE%BA)
+  - [有意识加工升级](#%E6%9C%89%E6%84%8F%E8%AF%86%E5%8A%A0%E5%B7%A5%E5%8D%87%E7%BA%A7)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 路径依赖
 
 **我们在处理信息时往往优先使用某种熟悉的加工路径去处理**（比如：看电影习惯看字幕，哪怕是中文电影），**这种趋向调用成本最低的处理模式有助于减轻大脑的处理压力。但是弊端也很明显：我们会屏蔽掉其他信息处理路径，丢失其他处理路径所能带给我们的细节信息**，比如“听”的路径，能传递给我们语气信息，提供更多对话人物的情绪细节，而字幕送传递的情绪细节就少的多，也没那么生动。
