--- a/瞎看看/学习高手/E.学霸养成/4.学霸养成[拒绝浮躁].md
+++ b/瞎看看/学习高手/E.学霸养成/4.学霸养成[拒绝浮躁].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [警惕方法论](#%E8%AD%A6%E6%83%95%E6%96%B9%E6%B3%95%E8%AE%BA)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 警惕方法论
 
 明确一点：**学习某种东西，学习方法固然重要，但是更重要的是“去学”，而不是永远停留在学习如何去学。方法论没有那么重要**
