--- a/瞎看看/学习高手/E.学霸养成/1.学霸养成[知识储备].md
+++ b/瞎看看/学习高手/E.学霸养成/1.学霸养成[知识储备].md
@@ -1,3 +1,11 @@
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
+
+- [知识体系间的联动](#%E7%9F%A5%E8%AF%86%E4%BD%93%E7%B3%BB%E9%97%B4%E7%9A%84%E8%81%94%E5%8A%A8)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+
 ## 知识体系间的联动
 
 各个领域的知识其实并不是完全独立的他们一般都是有联系的，或者说学习方法是有联系的。我们掌握的知识体系越庞大，知识量越充足，在接触新知识，新领域的时候先发优势就会越明显（新的知识往往不是凭空产生的，很有可能是建立在原有知识体系之上的某种优化或者突破）。你懂得越多，你学得越快。学霸真正的优势在于，TA 已经储存了很多思维和信息，也就是知识储备。
