--- a/小目标.md
+++ b/小目标.md
@@ -35,7 +35,7 @@
 - [ ] 一个人工智能的诞生学习
 - [ ] 程序员的英语
 - [ ] React 源码阅读
-- [ ] 极客时间（如何成为学习高手）
+- [x] 极客时间（如何成为学习高手）
 - [ ] 极客时间（玩转 webpack）
 - [ ] 极客时间（微信小程序全栈开发实战）
 - [ ] 极客时间（Web 安全攻防实战）
