--- a/前端方向/前端基础/CSS世界研读笔记/3.流、元素、基本尺寸.md
+++ b/前端方向/前端基础/CSS世界研读笔记/3.流、元素、基本尺寸.md
@@ -100,3 +100,9 @@ img {
 ### 超越最大
 
 当 min-\*与 max-\*冲突时，min 取胜，将应用最小样式规则
+
+## 幽灵空白节点
+
+定义：每一行内联元素容器或者一个行级元素称之为行级盒子
+
+每个行级盒子的头部都存在一个具备该行字体和行高属性，宽度为 0
