feat:《人格心理学》阅必（终于看完了...）

--- a/小目标.md
+++ b/小目标.md
@@ -72,7 +72,7 @@
 - [ ] 原生家庭
 - [ ] 性格拼图
 - [x] 你当像鸟飞往你的山(2021-10)
-- [ ] 社会心理学
+- [x] 社会心理学(2022-01-16)
 - [ ] 墨菲定律
 - [ ] 梦的解析
 - [x] 自卑与超越(2021-08)
