--- a/瞎看看/批处理/1.[基础语法].md
+++ b/瞎看看/批处理/1.[基础语法].md
@@ -1,8 +1,10 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [命令提示符回显与注释](#%E5%91%BD%E4%BB%A4%E6%8F%90%E7%A4%BA%E7%AC%A6%E5%9B%9E%E6%98%BE%E4%B8%8E%E6%B3%A8%E9%87%8A)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [命令提示符回显与注释](#命令提示符回显与注释)
+- [多命令合并](#多命令合并)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -27,4 +29,20 @@
 dir "C:\Program Files" > C:\lists.txt
 @REM 打印完成信息
 echo "The program has completed"
+```
+
+## 多命令合并
+
+并行任务：
+
+```bat
+@REM 使用单个 & 连接即可，任务并行执行
+.\conf\killProcess.cmd & nginx -c conf/test1_conf.conf
+```
+
+串行任务
+
+```bat
+@REM 使用两个 & 连接即可，任务串行执行，前一个任务成功，后一个任务开始
+.\conf\killProcess.cmd && nginx -c conf/test1_conf.conf
 ```
