feat：内联元素排版

--- a/前端方向/前端基础/CSS世界研读笔记/5.内联元素及排版.md
+++ b/前端方向/前端基础/CSS世界研读笔记/5.内联元素及排版.md
@@ -19,3 +19,19 @@
 - 上间距：20px
 
 则我们实际设置的 margin-top 为： `20 - Math.floor( ( 14 * 1.5 ) - 14 ) / 2 = 20 - 3 = 17px`
+
+## 内联元素的对齐方式
+
+### 基于文字基线对齐
+
+基于内联元素的文字基线进行对齐，条件：
+
+- 元素不能为空
+- overflow 为 visible
+
+## 基于元素 margin 底边缘
+
+- 元素为空
+- overflow 非 visible
+
+以上规则在内联元素对齐时非常有用
