feat:内联元素布局

--- a/前端方向/前端基础/CSS世界研读笔记/5.内联元素及排版.md
+++ b/前端方向/前端基础/CSS世界研读笔记/5.内联元素及排版.md
@@ -35,3 +35,15 @@
 - overflow 非 visible
 
 以上规则在内联元素对齐时非常有用
+
+## 内联元素非常重要的对齐规则
+
+1. 内联元素所在的行框盒子前面都有一个隐藏的“幽灵空白节点”，此节点依据 font-size、line-height 等属性撑起当前行的最小高度（考虑对齐问题时千万不要把他忘了）
+2. 内联元素对齐：
+   1. 图片/inline-block 元素默认与内联元素的默认对齐方式为：基于基线对齐（加上 line-height 的作用，会导致当前行实际高度超过 line-height 高度）
+   2. 基于第一条规则，组内对齐之后，元素们形成一个整体，此时这个整体的上边缘再与父节点的顶部进行对齐（正是基于这个机制，很多场景下行内会出现莫名其妙的空白行高）
+
+在处理内联元素对齐时，基本可以通过以下两种方式来规避“空白幽灵节点”带来的度面影响：
+
+- 父节点设置 font-size:0;
+- 父节点设置：line-height:0 或者 1ex
