feat：一个小目标

--- a/小目标.md
+++ b/小目标.md
@@ -8,6 +8,7 @@
   - [音乐](#音乐)
   - [指弹与弹唱曲目](#指弹与弹唱曲目)
   - [阅读](#阅读)
+  - [美食复刻](#美食复刻)
   - [瞎折腾](#瞎折腾)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
@@ -27,20 +28,23 @@
 - [x] requirejs
 - [x] Systemjs
 - [x] 极客时间（Web 协议详解与抓包实战）
-- [ ] esbuild
-- [ ] Three.js 学习
-- [ ] WebAssembly 学习
-- [ ] Next.js
-- [ ] Vite
-- [ ] 一个人工智能的诞生学习
-- [ ] 程序员的英语
-- [ ] React 源码阅读
 - [x] 极客时间（如何成为学习高手）
+- [ ] WebAssembly
+- [ ] Three.js
+- [ ] esbuild
+- [ ] Vite
+- [ ] Next.js
+- [ ] 程序员的英语
+- [ ] 自顶向下学 React 源码
 - [ ] 极客时间（玩转 webpack）
 - [ ] 极客时间（微信小程序全栈开发实战）
 - [ ] 极客时间（Web 安全攻防实战）
 - [ ] 极客时间（玩转 Vue3 全家桶）
 - [ ] 极客时间（跟月影学可视化）
+- [ ] express+mysql（实现简单的后端 CURD 服务）
+- [ ] 《CSS世界》
+- [ ] 《CSS选择器世界》
+- [ ] 《CSS新世界》
 
 ## 音乐
 
@@ -55,6 +59,7 @@
 - [ ] 卡农
 - [ ] 風の詩
 - [ ] 人为情叹
+- [ ] hurt
 
 ## 阅读
 
@@ -83,6 +88,15 @@
 - [ ] 中国婚姻史
 - [ ] 资本论
 
+## 美食复刻
+
+- [ ] 干锅土豆片
+- [ ] 卤肥肠
+- [ ] 干煸肥肠
+- [ ] 葱肠
+- [ ] 肉夹馍
+- [ ] 口水鸡
+
 ## 瞎折腾
 
 - [x] 配置实现软路由相关功能
@@ -92,3 +106,4 @@
 - [ ] Pr 学习
 - [x] 树莓派开发板学习
 - [ ] 极客时间（摄影入门课）
+- [ ] 一个人工智能的诞生学习
