--- a/小目标.md
+++ b/小目标.md
@@ -36,6 +36,7 @@
 - [ ] Next.js
 - [ ] 程序员的英语
 - [ ] 自顶向下学 React 源码
+- [ ] 重学React基础
 - [ ] 极客时间（玩转 webpack）
 - [ ] 极客时间（微信小程序全栈开发实战）
 - [ ] 极客时间（Web 安全攻防实战）
