--- a/小目标.md
+++ b/小目标.md
@@ -10,6 +10,7 @@
   - [阅读](#阅读)
   - [美食复刻](#美食复刻)
   - [瞎折腾](#瞎折腾)
+  - [2022 年度计划](#2022-年度计划)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -36,16 +37,16 @@
 - [ ] Next.js
 - [ ] 程序员的英语
 - [ ] 自顶向下学 React 源码
-- [ ] 重学React基础
+- [ ] 重学 React 基础
 - [ ] 极客时间（玩转 webpack）
 - [ ] 极客时间（微信小程序全栈开发实战）
 - [ ] 极客时间（Web 安全攻防实战）
 - [ ] 极客时间（玩转 Vue3 全家桶）
 - [ ] 极客时间（跟月影学可视化）
 - [ ] express+mysql（实现简单的后端 CURD 服务）
-- [ ] 《CSS世界》
-- [ ] 《CSS选择器世界》
-- [ ] 《CSS新世界》
+- [ ] 《CSS 世界》
+- [ ] 《CSS 选择器世界》
+- [ ] 《CSS 新世界》
 
 ## 音乐
 
@@ -91,7 +92,7 @@
 
 ## 美食复刻
 
-- [ ] 干锅土豆片
+- [x] 干锅土豆片
 - [ ] 卤肥肠
 - [ ] 干煸肥肠
 - [ ] 葱肠
@@ -107,4 +108,10 @@
 - [ ] Pr 学习
 - [x] 树莓派开发板学习
 - [ ] 极客时间（摄影入门课）
-- [ ] 一个人工智能的诞生学习
+- [x] 一个人工智能的诞生学习
+
+## 2022 年度计划
+
+- [ ] 阅读张鑫旭 CSS 三部曲
+- [ ] 重学 React 基础及底层实现
+- [ ] 掌握 Vue3 新的写法与基础
