--- a/小目标.md
+++ b/小目标.md
@@ -44,7 +44,7 @@
 - [ ] 极客时间（玩转 Vue3 全家桶）
 - [ ] 极客时间（跟月影学可视化）
 - [ ] express+mysql（实现简单的后端 CURD 服务）
-- [ ] 《CSS 世界》
+- [x] 《CSS 世界》
 - [ ] 《CSS 选择器世界》
 - [ ] 《CSS 新世界》
 
@@ -112,6 +112,6 @@
 
 ## 2022 年度计划
 
-- [ ] 阅读张鑫旭 CSS 三部曲
+- [ ] 阅读张鑫旭 CSS 三部曲(1/3)
 - [ ] 重学 React 基础及底层实现
 - [ ] 掌握 Vue3 新的写法与基础
