--- a/容器技术/Docker/4.Docker[端口映射].md
+++ b/容器技术/Docker/4.Docker[端口映射].md
@@ -1,23 +1,72 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [Dokcer容器端口映射](#dokcer%E5%AE%B9%E5%99%A8%E7%AB%AF%E5%8F%A3%E6%98%A0%E5%B0%84)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [Dokcer 容器端口映射](#dokcer%E5%AE%B9%E5%99%A8%E7%AB%AF%E5%8F%A3%E6%98%A0%E5%B0%84)
   - [单个映射](#%E5%8D%95%E4%B8%AA%E6%98%A0%E5%B0%84)
   - [多个映射以及区段映射](#%E5%A4%9A%E4%B8%AA%E6%98%A0%E5%B0%84%E4%BB%A5%E5%8F%8A%E5%8C%BA%E6%AE%B5%E6%98%A0%E5%B0%84)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
-## Dokcer容器端口映射
+## Dokcer 容器端口映射
 
 ### 单个映射
 
     dokcer run -itd --name my-nginx -p 8880:80 my-nginx-container
     # 说明： -p <宿主机端口>:<容器端口>
-   
+
 ### 多个映射以及区段映射
 
     # 多个端口映射
     dokcer run -itd --name my-nginx -p 80:80 -p 443:443 my-nginx-container
     # 区段映射，区段映射端口启动会比较慢，所以尽量少用，或减少映射的区间大小
     docker run -itd --name my-nginx -p 8000-9000:8000-9000 my-nginx-container
+
+## 修改已创建的容器端口映射
+
+查询到容器 ID，进入下面的目录：
+
+```shell
+# 查询容器ID
+docker inspect【CONTAINER ID】| grep Id
+# 进入容器目录
+cd /var/lib/docker/containers/CONTAINER ID
+# 停止容器
+docker stop [容器id]
+# 停止Docker服务
+systemctl stop docker
+
+```
+
+### 修改 hostconfig.json
+
+比如新增一个 80 端口，在 PortBindings 下边添加以下内容，端口配置之间用英文字符逗号隔开
+
+```
+"80/tcp": [
+{
+ "HostIp": "0.0.0.0",
+ "HostPort": "80"
+ }
+]
+```
+
+### 修改 config.v2.json
+
+找到 ExposedPorts 和 Ports 仿照之前内容添加端口映射
+
+```
+"ExposedPorts":  {
+    "2000/tcp":   {}
+},
+
+"Ports":{
+   "2000/tcp":[
+        {
+         "HostIp": "0.0.0.0",
+         "HostPort":  "2000"
+         }
+]
+},
+```
