feat:更新小目标、CSS属性选择器

--- a/小目标.md
+++ b/小目标.md
@@ -43,9 +43,9 @@
 - [ ] 极客时间（Web 安全攻防实战）
 - [ ] 极客时间（玩转 Vue3 全家桶）
 - [ ] 极客时间（跟月影学可视化）
-- [ ] express+mysql（实现简单的后端 CURD 服务）
-- [x] 《CSS 世界》
-- [ ] 《CSS 选择器世界》
+- [ ] express+mysql+sequelize（实现简单的后端 CURD 服务）
+- [x] 《CSS 世界》 （2022-02 阅毕）
+- [x] 《CSS 选择器世界》（2022-02 阅毕）
 - [ ] 《CSS 新世界》
 
 ## 音乐
@@ -80,7 +80,7 @@
 - [ ] 原生家庭
 - [ ] 性格拼图
 - [x] 你当像鸟飞往你的山(2021-10)
-- [x] 社会心理学(2022-01-16)
+- [x] 社会心理学(2022-01-16 阅毕)
 - [ ] 墨菲定律
 - [ ] 梦的解析
 - [x] 自卑与超越(2021-08)
@@ -112,6 +112,6 @@
 
 ## 2022 年度计划
 
-- [ ] 阅读张鑫旭 CSS 三部曲(1/3)
+- [ ] 阅读张鑫旭 CSS 三部曲(2/3)
 - [ ] 重学 React 基础及底层实现
 - [ ] 掌握 Vue3 新的写法与基础
