--- a/小目标.md
+++ b/小目标.md
@@ -81,7 +81,7 @@
 - [ ] 性格拼图
 - [x] 你当像鸟飞往你的山(2021-10)
 - [x] 社会心理学(2022-01-16 阅毕)
-- [ ] 墨菲定律
+- [x] 墨菲定律(2022-03-17 阅毕)
 - [ ] 梦的解析
 - [x] 自卑与超越(2021-08)
 - [ ] 且听风吟
