--- a/小目标.md
+++ b/小目标.md
@@ -43,7 +43,7 @@
 - [ ] 极客时间（Web 安全攻防实战）
 - [ ] 极客时间（玩转 Vue3 全家桶）
 - [ ] 极客时间（跟月影学可视化）
-- [ ] express+mysql+sequelize（实现简单的后端 CURD 服务）
+- [x] Nestjs-实现简单的后端 CURD 服务（2022-03）
 - [x] 《CSS 世界》 （2022-02 阅毕）
 - [x] 《CSS 选择器世界》（2022-02 阅毕）
 - [ ] 《CSS 新世界》
