--- a/容器技术/Docker/1.Docker[基础命令].md
+++ b/容器技术/Docker/1.Docker[基础命令].md
@@ -48,6 +48,8 @@ service docker start
 - 导出镜像：`docker save -o dockerdemo.tar dockerdemo`
 - 导入镜像：`docker load -i dockerdemo.tar`
 - 重启 Docker 服务：`systemctl restart docker`
+- 拉取镜像：`docker pull xxx镜像`
+- 拉取镜像（指定目标平台，此处指定拉取 arm64/v8 平台的镜像，有的时候镜像自动判定平台并不准确）：`docker pull xxx镜像 --platform=linux/arm64/v8`
 
 解释：
 
