feat：更新小目标

--- a/小目标.md
+++ b/小目标.md
@@ -5,6 +5,7 @@
 
 - [Todo List](#todo-list)
   - [工作充电](#工作充电)
+  - [源码阅读计划](#源码阅读计划)
   - [音乐](#音乐)
   - [指弹与弹唱曲目](#指弹与弹唱曲目)
   - [阅读](#阅读)
@@ -32,9 +33,7 @@
 - [x] 极客时间（如何成为学习高手）
 - [ ] WebAssembly
 - [ ] Three.js
-- [ ] esbuild
-- [ ] Vite
-- [ ] Next.js
+- [ ] esbuild/Vite
 - [ ] 程序员的英语
 - [ ] 自顶向下学 React 源码
 - [ ] 重学 React 基础
@@ -47,6 +46,14 @@
 - [x] 《CSS 世界》 （2022-02 阅毕）
 - [x] 《CSS 选择器世界》（2022-02 阅毕）
 - [ ] 《CSS 新世界》
+- [ ] 《JavaScript 函数式编程》
+- [ ] 《重构：改善既有代码的设计(第 2 版)》
+
+## 源码阅读计划
+
+- [ ] React
+- [ ] Systemjs
+- [ ] requirejs
 
 ## 音乐
 
