--- a/瞎看看/批处理/7.[for流程控制].md
+++ b/瞎看看/批处理/7.[for流程控制].md
@@ -1,8 +1,11 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-**Table of Contents**  *generated with [DocToc](https://github.com/thlorenz/doctoc)*
 
-- [For 流程控制](#for-%E6%B5%81%E7%A8%8B%E6%8E%A7%E5%88%B6)
+**Table of Contents** _generated with [DocToc](https://github.com/thlorenz/doctoc)_
+
+- [For 流程控制](#for-流程控制)
+  - [For 中执行多条命令](#for-中执行多条命令)
+  - [For 中嵌套使用局部变量（相当于启用局部变量的块及作用域）](#for-中嵌套使用局部变量相当于启用局部变量的块及作用域)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -20,4 +23,60 @@
 ```bat
 @echo off
 for %%i in (*.md) do echo %%i
+```
+
+### For 中执行多条命令
+
+```bat
+for %%i in (*.md) do (
+  echo %%i
+  echo %%i
+)
+```
+
+### For 中嵌套使用局部变量（相当于启用局部变量的块及作用域）
+
+出现这个概念的根源：整个 for 语句的每一轮循环被当做一条完整语句执行，虽然可以使用括号包含多条语句，但是在解释的时候，他被解释成一条语句。
+
+因此，如果 For 循环体中有多条语句，且定义了局部变量，就必须使用延迟环境变量拓展这个特性；举个栗子：
+
+```bat
+@echo off
+set var=test & echo %test%
+pause
+```
+
+这个例子只有一条语句，将两个命令合并书写到一行，实际执行时，两条子命令的运行环境是一样的，因此第二条命令在做变量拓展的时候，由于当前语句还没有结束，环境变量中就不会存在 test 这个变量，因此取值会失败，要解决这个问题就需要使用到延迟环境变量拓展这个特性，变更为下面的写法，首先开启延迟标记，然后使用!进行变量拓展：
+
+```bat
+@echo off
+setlocal ENABLEDELAYEDEXPANSION
+set var=test & echo !var!
+pause
+```
+
+解释：使用延迟拓展时，变量拓展会使用当前命令执行完成后的环境进行拓展，而不是执行过程中的环境
+
+1. 首先在脚本头部使用`@setlocal enabledelayedexpansion`打开变量延迟拓展
+2. 在需要使用变量延迟拓展的位置用`!`替换`%`进行变量索引
+
+一个文件后缀批量重命名的样例：
+
+```bat
+@REM 打开相关标记（延迟环境变量拓展），启用延迟拓展
+@setlocal enabledelayedexpansion
+@echo off
+set LESSCHARSET=utf-8
+set /P targetSuffix="你想替换的文件名后缀是啥？(例：png):"
+set /P renameSuffix="替换成啥后缀？（例：jpg）："
+
+for %%i in (*.%targetSuffix%) do (
+  set temp=%%i
+  @REM 使用!进行延迟变量拓展
+  set targetName=!temp:%targetSuffix%=%renameSuffix%!
+  echo 文件重命名:%%i 到 !targetName!
+  ren "%%i" "!targetName!"
+)
+echo 重命名完成, 按任意键退出（不出差了，一起吃饭呀~）
+pause
 ```
