--- a/瞎看看/批处理/7.[for流程控制].md
+++ b/瞎看看/批处理/7.[for流程控制].md
@@ -46,7 +46,7 @@ set var=test & echo %test%
 pause
 ```
 
-这个例子只有一条语句，将两个命令合并书写到一行，实际执行时，两条子命令的运行环境是一样的，因此第二条命令在做变量拓展的时候，由于当前语句还没有结束，环境变量中就不会存在 test 这个变量，因此取值会失败，要解决这个问题就需要使用到延迟环境变量拓展这个特性，变更为下面的写法，首先开启延迟标记，然后使用!进行变量拓展：
+这个例子只有一条语句，将两个命令合并书写到一行，实际执行时，两条子命令的运行环境是一样的，因此第二条命令在做变量拓展的时候，由于当前语句还没有结束，环境变量中就不会存在 var 这个变量，因此取值会失败，要解决这个问题就需要使用到延迟环境变量拓展这个特性，变更为下面的写法，首先开启延迟标记，然后使用!进行变量拓展：
 
 ```bat
 @echo off
