--- a/前端方向/前端基础/CSS新世界/换行与排版优化.md
+++ b/前端方向/前端基础/CSS新世界/换行与排版优化.md
@@ -50,3 +50,28 @@ p {
 ```html
 <p>大家好，我叫zhang<wbr />xin<wbr />xu，感谢大家购买我的书。</p>
 ```
+
+IE 的 polyfill 实现：
+
+```css
+wbr:after {
+  content: "\00200B";
+}
+```
+
+### 实现原理
+
+`<wbr>`之所以能够创造新的换行机会，是因为其创建了一个带有换行特性的宽度为 0px 的空格。该空格的 Unicode 编码是 U+200B，因此`<wbr>`标签也可以替换为`&#x200b;`，例如下面 HTML 代码实现的效果和图 3-68 所示的效果是一样的,不过`&#x200b;`的语义不太好，建议大家还是使用`<wbr>`：
+
+```html
+<p>大家好，我叫zhang&#x200B;xin&#x200B;xu，感谢大家购买我的书。</p>
+```
+
+_Tips:`<wbr>`换行和`&shy;`换行的区别在于`<wbr>`在换行的时候不会有
+额外的字符显现，因此，其非常适合用于非英文单词的内容换行_
+
+## 总结
+
+- 动态文本内容换行使用 word-break:break-all 和 wordwrap:break-word 组合代码，如果要彻底换行，还可以使用 line-break:anywhere。
+
+- 静态内容排版不建议使用 word-break 属性、word-wrap 属性或者 line-break 属性，如果是英文单词，则使用`&shy;`软连字符优化排版；如果是非英文单词，则使用`<wbr>`标签优化排版。
