feat：文字渲染、图像渲染

--- a/前端方向/前端基础/CSS新世界/文字处理增强.md
+++ b/前端方向/前端基础/CSS新世界/文字处理增强.md
@@ -151,3 +151,36 @@ unicode-bidi: plaintext;
 unicode-bidi: isolate;
 unicode-bidi: isolate-override;
 ```
+
+## 文字尺寸、样式控制
+
+- 在移动端的 Web 开发中，务必设置`-webkit-text- size-adjust:none`
+- 在非精确布局下可以使用相对单位 ch（一个阿拉伯数字 0 字符的宽度）
+- 关于输入的 tab 宽度控制，可以使用 tab-size 来控制 tab 所占据的宽度（tab-size:4 一个 tab 占据四个空格的宽度）
+- 斜体控制，一段文字中，仅允许英文倾斜，CJK 文本不允许倾斜：`font-synthesis`
+- 小型大写：`font-variant: small-caps;`
+- 数字显示控制（上标、0 显示优化、）：`font-variant-numeric`
+
+### 文字倾斜
+
+语法：
+
+` font-synthesis: none | [ weight || style ]`
+
+- none 表示粗体和斜体都不需要合成。
+- weight 表示如果需要，可以合成粗体字体。
+- style 表示如果需要，可以合成斜体字体
+
+```css
+/* 中文字体一般是没有倾斜资源的，因此我们不允许倾斜中文，仅允许倾斜英文，关闭所有字体合成 */
+font-synthesis: none;
+```
+
+### 数字显示控制（属性：font-variant-numeric）
+
+- ordinal：表示强制使用序数标记特殊的标志符号。例如无须使用 <sup>标签就可以让字符“1st，2nd，3rd，4th，5th”表现为 图 9-37 所示的上标效果。
+- slashed-zero：关键字属性值强制使用带斜线的 0。当需要明确 区分字母 O 和数字 0 时，此关键字非常有用
+- tabular-nums：设置所有数字采用等宽渲染
+- diagonal-fractions 和 stacked-fractions：用来控制分数的样式，其中，diagonal-fractions 表示让分子和分母尺寸 变小并将两者用斜线隔开，stacked-fractions 表示让分子和分母尺寸变小并将两者使用 水平线隔开
+
+_Tips：要想看到符合定义的效果，需要使用对应 OpenType 字体才行。_
