--- a/前端方向/前端基础/CSS新世界/图像显示.md
+++ b/前端方向/前端基础/CSS新世界/图像显示.md
@@ -6,3 +6,20 @@
 - object-position：控制替换元素的内容位置，默认为 50% 50%，所以，我们看到的图片都是渲染在上下左右剧中的位置
 - image-orientation：控制图片元素是否根据图源信息进行旋转（手机拍摄的照片都是包含旋转信息的，默认不需要设置，自动旋转，如果不需要旋转，则设置为 none）
 - loading 属性：这是一个 html 属性可以用于控制图片以及 iframe 的懒加载，比较实用
+- cross-fade：多背景混合
+- element：将任意 DOM 节点变为图片，然后引用，并且，背景图并不是静止的，而是随着原始元素的样式同步变化的（hover，animation）[FireFox 尊享]
+
+### 关于 cross-fade 的应用
+
+一个典型应用：背景图片的透明度修改（不影响内在的文字透明度）：
+
+```css
+.dark {
+  background-image: cross-fade(
+    /* 透明图 */
+      url(data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==),
+    /* 随意背景图 */ url(2.jpg),
+    40%
+  );
+}
+```
