--- a/小目标.md
+++ b/小目标.md
@@ -1,16 +1,15 @@
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-
 - [Todo List](#todo-list)
-  - [工作充电](#%E5%B7%A5%E4%BD%9C%E5%85%85%E7%94%B5)
-  - [源码阅读计划](#%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB%E8%AE%A1%E5%88%92)
-  - [音乐](#%E9%9F%B3%E4%B9%90)
-  - [指弹与弹唱曲目](#%E6%8C%87%E5%BC%B9%E4%B8%8E%E5%BC%B9%E5%94%B1%E6%9B%B2%E7%9B%AE)
-  - [阅读](#%E9%98%85%E8%AF%BB)
-  - [美食复刻](#%E7%BE%8E%E9%A3%9F%E5%A4%8D%E5%88%BB)
-  - [瞎折腾](#%E7%9E%8E%E6%8A%98%E8%85%BE)
-  - [2022 年度计划](#2022-%E5%B9%B4%E5%BA%A6%E8%AE%A1%E5%88%92)
+  - [工作充电](#工作充电)
+  - [源码阅读计划](#源码阅读计划)
+  - [音乐](#音乐)
+  - [指弹与弹唱曲目](#指弹与弹唱曲目)
+  - [阅读](#阅读)
+  - [美食复刻](#美食复刻)
+  - [瞎折腾](#瞎折腾)
+  - [2022 年度计划](#2022-年度计划)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -44,7 +43,7 @@
 - [x] Nestjs-实现简单的后端 CURD 服务（2022-03）
 - [x] 《CSS 世界》 （2022-02 阅毕）
 - [x] 《CSS 选择器世界》（2022-02 阅毕）
-- [ ] 《CSS 新世界》
+- [x] 《CSS 新世界》（2022-07 阅必）
 - [ ] 《JavaScript 函数式编程》
 - [ ] 《重构：改善既有代码的设计(第 2 版)》
 
@@ -118,7 +117,7 @@
 
 ## 2022 年度计划
 
-- [ ] 阅读张鑫旭 CSS 三部曲(2/3)
+- [x] 阅读张鑫旭 CSS 三部曲(3/3)(2022-07-01 完成)
 - [ ] 重学 React 基础及底层实现
 - [ ] 掌握 Vue3 新的写法与基础
 - [ ] 中间件 Caddy 的基础学习与使用
