feat：更新小目标

--- a/小目标.md
+++ b/小目标.md
@@ -46,6 +46,7 @@
 - [x] 《CSS 新世界》（2022-07 阅必）
 - [ ] 《JavaScript 函数式编程》
 - [ ] 《重构：改善既有代码的设计(第 2 版)》
+- [ ] 《SVG 精髓（第 2 版）》
 
 ## 源码阅读计划
 
@@ -121,3 +122,4 @@
 - [ ] 重学 React 基础及底层实现
 - [ ] 掌握 Vue3 新的写法与基础
 - [ ] 中间件 Caddy 的基础学习与使用
+- [ ] 《SVG 精髓（第 2 版）》（可选支线）
