feat：小目标更新

--- a/小目标.md
+++ b/小目标.md
@@ -47,6 +47,7 @@
 - [ ] 《JavaScript 函数式编程》
 - [ ] 《重构：改善既有代码的设计(第 2 版)》
 - [ ] 《SVG 精髓（第 2 版）》
+- [ ] 《JavaScript DOM 高级程序设计》
 
 ## 源码阅读计划
 
@@ -120,6 +121,6 @@
 
 - [x] 阅读张鑫旭 CSS 三部曲(3/3)(2022-07-01 完成)
 - [ ] 重学 React 基础及底层实现
-- [ ] 掌握 Vue3 新的写法与基础
-- [ ] 中间件 Caddy 的基础学习与使用
-- [ ] 《SVG 精髓（第 2 版）》（可选支线）
+- [ ] 《SVG 精髓（第 2 版）》（可选支线 1）
+- [ ] 掌握 Vue3 新的写法与基础（可选支线 2）
+- [ ] 中间件 Caddy 的基础学习与使用（可选支线 3）
