feat：小目标更新

--- a/小目标.md
+++ b/小目标.md
@@ -29,6 +29,7 @@
 - [x] Systemjs
 - [x] 极客时间（Web 协议详解与抓包实战）
 - [x] 极客时间（如何成为学习高手）
+- [ ] 张力涛 AI 视频课
 - [ ] WebAssembly
 - [ ] Three.js
 - [ ] esbuild/Vite
@@ -119,8 +120,9 @@
 
 ## 2022 年度计划
 
-- [x] 阅读张鑫旭 CSS 三部曲(3/3)(2022-07-01 完成)
-- [ ] 重学 React 基础及底层实现
-- [ ] 《SVG 精髓（第 2 版）》（可选支线 1）
-- [ ] 掌握 Vue3 新的写法与基础（可选支线 2）
-- [ ] 中间件 Caddy 的基础学习与使用（可选支线 3）
+- [x] 阅读张鑫旭 CSS 三部曲(3/3)(主线 S-1)(2022-07-01 完成)
+- [ ] 重学 React 基础及底层实现(主线 S-2)
+- [ ] 《SVG 精髓（第 2 版）》(支线 A-1)
+- [ ] 张力涛 AI 视频课(支线 A-2)
+- [ ] 掌握 Vue3 新的写法与基础(支线 B-1)
+- [ ] 中间件 Caddy 的基础学习与使用(支线 C-1)
