--- a/瞎看看/关于色相.md
+++ b/瞎看看/关于色相.md
@@ -7,3 +7,18 @@
 <img src="../img/hue.awebp" />
 
 从上图可以看出，从 0° 到 360°，是一个分段函数，其中，每一段都有一个颜色分量是 0，一个分量是 1，另一个分量或从 0 到 1，或从 1 到 0。
+
+## 色相渐变快捷 CSS
+
+```css
+background: linear-gradient(
+  to right,
+  #f00 0%,
+  #ff0 17%,
+  #0f0 33%,
+  #0ff 50%,
+  #00f 67%,
+  #f0f 83%,
+  #f00 100%
+);
+```
