--- a/前端方向/前端基础/前端工程化/前端工程化[为旧模块编写类型声明].md
+++ b/前端方向/前端基础/前端工程化/前端工程化[为旧模块编写类型声明].md
@@ -26,3 +26,19 @@
   // ...
 }
 ```
+
+4. 在声明文件中进行类型声明
+
+~~~typescript
+// 声明变量并进行导出
+declare const angularAMD: {
+  directive: Function;
+  route: Function;
+  bootstrap: Function;
+  service: Function;
+  processQueue: Function;
+  filter: Function;
+};
+
+export default angularAMD;
+~~~
