--- a/小目标.md
+++ b/小目标.md
@@ -49,6 +49,9 @@
 - [ ] 《重构：改善既有代码的设计(第 2 版)》
 - [ ] 《SVG 精髓（第 2 版）》
 - [ ] 《JavaScript DOM 高级程序设计》
+- [ ] 《高等数学》宋浩
+- [ ] 《线性代数》宋浩
+- [ ] HLSL语言简要学习
 
 ## 源码阅读计划
 
@@ -70,6 +73,7 @@
 - [ ] 風の詩
 - [ ] 人为情叹
 - [ ] hurt
+- [ ] 天空之城
 
 ## 阅读
 
@@ -112,8 +116,6 @@
 - [x] 配置实现软路由相关功能
 - [x] NAS 服务搭建
 - [x] DOS 批处理学习
-- [ ] Fcpx 学习
-- [ ] Pr 学习
 - [x] 树莓派开发板学习
 - [ ] 极客时间（摄影入门课）
 - [x] 一个人工智能的诞生学习
