--- a/小目标.md
+++ b/小目标.md
@@ -10,6 +10,7 @@
   - [美食复刻](#美食复刻)
   - [瞎折腾](#瞎折腾)
   - [2022 年度计划](#2022-年度计划)
+  - [2023 年度计划](#2023-年度计划)
 
 <!-- END doctoc generated TOC please keep comment here to allow auto update -->
 
@@ -51,7 +52,7 @@
 - [ ] 《JavaScript DOM 高级程序设计》
 - [ ] 《高等数学》宋浩
 - [ ] 《线性代数》宋浩
-- [ ] HLSL语言简要学习
+- [ ] HLSL 语言简要学习
 - [ ] TypeScript 系统性学习
 
 ## 源码阅读计划
@@ -74,7 +75,7 @@
 - [ ] 風の詩
 - [ ] 人为情叹
 - [ ] hurt
-- [ ] 天空之城
+- [x] 天空之城
 
 ## 阅读
 
@@ -129,3 +130,9 @@
 - [ ] 张力涛 AI 视频课(支线 A-2)
 - [ ] 掌握 Vue3 新的写法与基础(支线 B-1)
 - [ ] 中间件 Caddy 的基础学习与使用(支线 C-1)
+
+## 2023 年度计划
+
+- [ ] 宋浩高等数学视频课(主线 S-1)
+- [ ] 重学 React 基础及底层实现(主线 S-2)
+- [ ] 极客时间可视化课程(支线 A-1)
